--- a/src/styles.css
+++ b/src/styles.css
@@ -60,3 +60,38 @@
     transform: scale(1.3);
 }
 
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffff;
+    width: 400px;
+    border-radius: 8px;
+}
+
+.main h2{
+    margin: 16px 0;
+    font-size: 39px;
+}
+
+.main span{
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+
+@media (max-width: 712px){
+    .title{
+        font-size: 60px;
+    }
+    .main h2{
+        font-size: 28px;
+    }
+    .main {
+        width: 80%;
+    }
+    .containerInput{
+        font-size: 5px;
+    }
+}
